--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/web/build/bundle.css'>
+	<link rel='stylesheet' href='/web/bundle.css'>
 
-	<script defer src='/web/build/bundle.js'></script>
+	<script defer src='/web/bundle.js'></script>
 </head>
 
 <body>
