--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Svelte app</title>
-	<link rel='stylesheet' href='/web/bundle.css'>
+	<link rel='stylesheet' href='/web/build/bundle.css'>
 
-	<script defer src='/web/bundle.js'></script>
+	<script defer src='/web/build/bundle.js'></script>
 </head>
 
 <body>
