--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
 </head>
 
 <body>
+	<!-- <div>
+		<my-card
+			card_title="Red Person"
+			card_desc=" Lprem ipsum dolor sit, amet consectetur.."
+			card_img="https://bit.ly/34B3zHX"
+		>
+	</div> -->
+	<my-Main>
 </body>
 </html>
